Implement database persistence layer (Issue #8)
- Replace in-memory storage with SQLAlchemy ORM and SQLite
- Add database models for Activity and Participant with many-to-many relationship
- Create database initialization script with seed data (9 activities)
- Update all API endpoints to use database sessions
- Add SQLAlchemy and Alembic to requirements.txt
- Configure .gitignore for database files and venv
- Add DATABASE.md documentation
- Data now persists across application restarts

Resolves #8

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@
 *.log
 *.sql
 *.sqlite
+*.db
+mergington_school.db
 
 # OS generated files #
 ######################
@@ -38,6 +40,8 @@ Thumbs.db
 
 # Python files
 __pycache__
+venv/
+*.pyc
 
 # Env files
 .env
